# english-tutor-bot

./: .env.example  .flake8  .flutter-plugins-dependencies  .gitignore  .markdownlint.json  .pre-commit-config.yaml  01-roles.ipynb  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  TESTE_VERIFICACAO_FINAL.md  api.py  backend  config.toml  conversacao_ingles.py  docs  error_dialog.dart  exemplo_completo_audio_resumo.py  exemplo_transcricao_groq.py  index.html  interface_streamlit.py  launch.json  lingua_flow_service.dart  logic.py  main.yml  manifest.json  privacy-policy.html  pubspec.yaml  pyproject.toml  pyrightconfig.json  render.yaml  requirements-api.txt  requirements-dev.txt  requirements-streamlit.txt  requirements.txt  robots.txt  sitemap.xml  style.css  test_api_local.py  (+1 more)
.dart_tool/: package_config.json  package_graph.json
.dart_tool/extension_discovery/: vs_code.json
.devcontainer/: devcontainer.json
.github/workflows/: CONTRIBUTING.md  PRIORIDADE_3_CI_CD.md  PROXIMA_FASE_FASTAPI_RENDER.md  RESUMO_FINAL_27_DEZEMBRO.md  manual.yml  python-lint.yml  static.yml  tests.yml
.ipynb_checkpoints/: 01-roles-checkpoint.ipynb  conversacao_ingles-checkpoint.py  exemplo_groq-checkpoint.py
backend/: __init__.py  audio_utils.py  test_audio_trim.py
flutter-version/: flutter_bootstrap.js  flutter_service_worker.js  index.html  main.dart.js  manifest.json  version.json
flutter-version/assets/: NOTICES
html-version/: index.html
lingua_flow_app/: README.md  api.py  pubspec.yaml
lingua_flow_app/lib/: main.dart
lingua_flow_app/linux/: CMakeLists.txt
lingua_flow_app/test/: widget_test.dart
lingua_flow_app/web/: index.html
python-examples/: conversacao_ingles.py  exemplo_groq.py
python-version/: README.md  interface_streamlit.py  requirements.txt
src/: __init__.py
src/core/: __init__.py  config.py
tests/: PRIORIDADE_2_CONCLUIDA.md  __init__.py  conftest.py  test_config.py
(+12 files in other folders)
